feat(samples): put endpoint
